--- a/css/components/toolbar.css
+++ b/css/components/toolbar.css
@@ -111,23 +111,12 @@
   top: 90px;
   right: 0;
   width: 100px;              /* match with handle: body.minimap-open #minimapHandle */
-  height: 100vh;    /* use dvh to stop “jump”, caused by mobile browsers dynamically showing and hiding the URL bar if supported - see below*/
+  height: 100vh;
   z-index: 999;
   transform: translateX(100%);   /* hidden off-screen */
   transition: transform 0.3s ease-out;
 }
 
-/* Modern browsers override */
-@supports (height: 100dvh) {
-  #timelineMinimap {
-    height: 100dvh;
-  }
-}
-
-/* Optional: JS fallback overrides both if set */
-html.has-vh-fix #timelineMinimap {
-  height: calc(var(--vh, 1vh) * 100);
-}
 
 #timelineMinimap.open {
   transform: translateX(0);
